2009-12-31  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Evaluator.h : new class Rcpp::Evaluator that eases
	evaluation of R expression with error capture. so that we can for example
	throw C++ exceptions
	
	* src/Evaluator.cpp : implementation of Rcpp::Evaluator
	
	* inst/unitTests/runit.evaluator: unit tests of Rcpp::Evaluator
	
	* inst/Rcpp/RObject.h: RObject::RObject(SEXP) now initializes isProtected
	
	* inst/src/Environment.cpp: use of exceptions

2009-12-30  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Environment.h : added support for environment through the
	Rcpp::Environment class
	
	* src/Environment.cpp: idem
	
	* inst/unitTests/runit.environments.R: testing the above
	
	* src/RcppCommon.h: now includes <R_ext/Callbacks.h>, needed for the 
	environment support
	
2009-12-30  Romain Francois <francoisromain@free.fr>

	* src/Makevars* : adapt for allowong copy of the Rcpp directory
	
	* src/Rcpp_RObject.h: replace by src/Rcpp/RObject.h
	
	* src/Rcpp_XPtr.h: replaced by src/Rcpp/XPtr.h
	
	* src/*.cpp: adapt to the Rcpp directory
	
	* cleanup: idem

2009-12-30  Romain Francois <francoisromain@free.fr>

	* inst/unitTests/runit.RObject.R: new unit tests

	* inst/unitTests/runit.exceptions.R: idem

	* inst/unitTests/runit.XPtr.R: idem

	* man/RcppUnitTests.Rd: shows and link unit test reports generated at
	build time

2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/Rcpp_RObject.{h,cpp}: new namespace Rcpp and new class
	Rcpp::RObject to replace RcppSexp with the same functionality.
	
	* src/Rcpp_XPtr.h: replaces RcppXPtr.h and the class is now 
	Rcpp::XPtr<> and extends Rcpp::RObject
	
	* inst/examples/RcppInline/external_pointer.r: use the new namespace
	
	* inst/examples/RcppInline/RcppInlineWithLibsExamples.r: idem
	
	* inst/examples/RcppInline/RcppSexpTests.r: idem
	
	* DESCRIPTION: marked as version 0.7.0.5
	
	* inst/doc/*: fake (empty) vignette and unit test trigger
	
	* inst/unitTests/*: prepare the space for unit tests
	