@@ -1,3 +1,12 @@
+2010-01-01  Romain Francois <francoisromain@free.fr>
+
+	* pkg/src/Rcpp/RObject.h: s/protect/preserve/, added methods
+	isPreserved and forgetPreserve
+	
+	* pkg/src/Rcpp/XPtr.h 
+	* pkg/src/RObject.cpp
+	* pkg/src/Evaluator.cpp
+
 2009-12-31  Romain Francois <francoisromain@free.fr>
 
 	* src/Rcpp/Evaluator.h : new class Rcpp::Evaluator that eases
